--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "fs-extra": "^7.0.0",
     "tape": "^4.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^12.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
